--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -2,6 +2,6 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "arrowParens": "avoid",
-  "printWidth": 120,
-  "semi": false
+  "printWidth": 100,
+  "semi": true
 }
