--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,13 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "ui-clone-npm",
+  "version": "0.1.1",
   "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "cross-env CI=true yarn test --bail --findRelatedTests"
-      ]
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "babel-loader": "^8.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
@@ -25,18 +15,21 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1"
   },
-  "author": {
-    "email": "profissionalf.andre@gmail.com",
-    "name": "Felipe",
-    "url": "https://github.com/flubyGit/"
-  },
+  "author": "Felipe André <profissionalf.andre@gmail.com> (https://github.com/flubyGit/)",
+  "homepage": "https://github.com/flubyGit/ui-clone-npm",
+  "description": "Ui clone realized by Felipe André - Developer JR.",
   "repository": {
-    "url": "https://github.com/flubyGit/ui-clone-npm"
+    "url": "https://github.com/flubyGit/ui-clone-npm",
+    "type": "git"
+  },
+  "bugs": {
+    "email": "profissionalf.andre@gmail.com",
+    "url": "https://github.com/flubyGit/ui-clone-bootstrap/issues"
   },
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,7 +49,10 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "css-loader": "^4.3.0",
     "eslint": "6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -65,8 +61,22 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.4.1",
+    "webpack-cli": "^3.3.12",
+    "prettier": "^2.1.1",
+    "style-loader": "^1.2.1",
     "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.1.1"
+    "lint-staged": "^10.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "prettier --write"
+    ]
   }
 }
